# ghidra-extensions

./: README.md
CtadlQueries/: assist.dl  bitcast_icmp.dl  double_free.dl  memory_leak.dl  taintquery.dl  unchecked_alloc.dl  uninitialized.dl  use_after_free.dl
GhidraFrida/: README.md  README.txt  build.gradle  certification.manifest  extension.properties
GhidraFrida/data/debugger-launchers/: local-frida.sh
GhidraFrida/data/support/: local-frida.py
GhidraFrida/src/main/py/: README.md  pyproject.toml
GhidraFrida/src/main/py/ghidrafrida/: __init__.py  arch.py  commands.py  methods.py  schema.xml  util.py
GhidraFrida/support/: local-frida.py
GhidraSarifHandlers/: README.txt  extension.properties
GhidraSarifHandlers/src/main/py/: README.md
GhidraSarifHandlers/src/main/py/ghidravol/: __init__.py  commands_linux.py  commands_windows.py  fuse.py  tslist.py  vol.py  volcmd.py  (+1 more)
GhidraVol/: Module.manifest  README.md  README.txt  build.gradle  certification.manifest  extension.properties
GhidraVol/data/: linux.config  mac.config  windows.config
GhidraVol/data/debugger-launchers/: gdb-vol.sh  lldb-vol.sh
GhidraVol/src/main/py/: README.md  USE_NOTES.txt  pyproject.toml
GhidraVol/src/main/py/ghidravol/: __init__.py  commands_linux.py  commands_macos.py  commands_windows.py  gdb_commands.py  gdb_methods.py  gdb_vol.py  gdb_volpatch.py  lldb_commands.py  lldb_methods.py  lldb_vol.py  lldb_volpatch.py  schema_vol.xml  schema_vol_gdb.xml  schema_vol_lldb.xml  tslist.py  volcmd.py
GhidraVol/src/main/py/ghidravol/config/: linux.config  mac.config  windows.config
(+3 files in other folders)
