[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghidravol"
version = "10.4"
authors = [
  { name="Ghidra Development Team" },
]
description = "Ghidra's Plugin for Volatility"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Volatility Software License",
    "Operating System :: OS Independent",
]
dependencies = [
#    "ghidratrace==10.4",
#    "ghidralldb==10.4",
]

[project.urls]
"Homepage" = "https://github.com/NationalSecurityAgency/ghidra"
"Bug Tracker" = "https://github.com/NationalSecurityAgency/ghidra/issues"
